Pique: Fix My Account buttons spacing issue. See #28.

--- a/pique/woocommerce.css
+++ b/pique/woocommerce.css
@@ -1258,6 +1258,12 @@ p.no-comments {
 	width: 100%;
 }
 
+.woocommerce-MyAccount-content table .button {
+	word-wrap: normal;
+	word-break: normal;
+	margin: .25em;
+}
+
 /**/
 /* !# Widgets */
 /**/
